@startuml
'https://plantuml.com/class-diagram

interface TrainingRepository {
    selectAll
}

class JdbcTrainingRepository {
    selectAll
}

class MockTrainingRepository {
    selectAll
}

class TrainingServiceImpl {
    findAll
}

TrainingRepository <|.. JdbcTrainingRepository
TrainingRepository <|.. MockTrainingRepository
TrainingServiceImpl .> TrainingRepository


@enduml